Refactor project layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(f5-tamarind)
 
 add_subdirectory(thread-pool)
-add_subdirectory(src)
-add_subdirectory(exe)
+add_subdirectory(tamarind)
 
 if(TARGET check)
     set_property(TARGET check PROPERTY EXCLUDE_FROM_ALL TRUE)
