--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(f5-tamarind)
 
+add_subdirectory(makham)
 add_subdirectory(thread-pool)
 add_subdirectory(tamarind)
 
