--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_subdirectory(headers)
+add_subdirectory(headers-makham)
+add_subdirectory(headers-tamarind)
 add_subdirectory(parser)
 add_subdirectory(workflows)
