Blank unit and task coroutine return types.

--- a/test/headers-makham/CMakeLists.txt
+++ b/test/headers-makham/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(makham-headers-tests STATIC EXCLUDE_FROM_ALL
+        task.cpp
         unit.cpp
     )
 target_link_libraries(makham-headers-tests f5-tamarind)
