Create workflow objects.

--- a/tamarind/CMakeLists.txt
+++ b/tamarind/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(f5-tamarind
         parse.cpp
         runtime.cpp
+        workflow.cpp
     )
 target_include_directories(f5-tamarind PUBLIC ../include)
 target_link_libraries(f5-tamarind PUBLIC fost-core f5-makham)
